assets/custom-base-overrides.css
body{
    overflow-x: hidden !important; 
    position: relative;
    width: 100%;
    padding-top: 70px;
}

.page-width{
    padding: 0 !important;
}

.product__column-sticky{
    top: 0 !important;
}

section {
    width: 100%;
    max-width: 100% !important;
}

@media (max-width: 1024px) {
    body{
        background-image: none, url('/assets/bg-left-comichive.png') !important;
        padding-top: 51px;
        background-size: 60vw;
    } 

    .color-scheme-1{
        background-image: none, url('/assets/bg-left-comichive.png') !important;
        background-size: 70vw;
    }

    .page-width{
        padding: 0 30px !important;
    }

    .collection ul{
        column-gap: 0 !important;
        margin-right: -20px;
    }

    .collection li{
        flex: 0 1 calc(50% - 20px);
        box-sizing: border-box;
    }

    .collection li:nth-child(odd){
        margin-right: 20px;
    }
}

